RESOLVED FIXED137677
[Mac] Return value of createImageSourceOptions() is leaked in ImageSourceCG
https://bugs.webkit.org/show_bug.cgi?id=137677
Summary [Mac] Return value of createImageSourceOptions() is leaked in ImageSourceCG
Chris Dumez
Reported 2014-10-13 15:37:59 PDT
The return value of createImageSourceOptions() is leaked in ImageSourceCG.cpp. It returns a CFDictionaryRef created using CFDictionaryCreate(). Therefore, the return value should be released but it currently is not.
Attachments
Patch (8.09 KB, patch)
2014-10-13 15:43 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2014-10-13 15:43:14 PDT
WebKit Commit Bot
Comment 2 2014-10-13 16:46:23 PDT
Comment on attachment 239754 [details] Patch Clearing flags on attachment: 239754 Committed r174665: <http://trac.webkit.org/changeset/174665>
WebKit Commit Bot
Comment 3 2014-10-13 16:46:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.